gcc-14.2.0/gcc/testsuite/gm2/pim/fail/strconst.def
version https://git-lfs.github.com/spec/v1
oid sha256:61c4cbad64e205c0a25ae19b4c21a51395c18dedbd5925bd006a3cf3de74b4c5
size 78
